<resources>
    <string name="app_name">Groups</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_login">Login</string>
    <string name="title_activity_admin_panel">Admin_panel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="clients">Студенти</string>
    <string name="users">Користувачі</string>
    <string name="act_for_admin">Оберіть потрібну категорію:</string>
    <string name="teachers">Вчителі</string>
    <string name="groups">Навчальні групи</string>
    <string name="auditories">Аудиторії</string>
    <string name="description">Опис</string>
    <string name="degree">Модуль</string>
    <string name="nameC">Назва курсу</string>

    <string name="lessons">Заняття</string>
    <string name="myTerm">Мій розклад</string>

    <string name="courses">Курси</string>
    <string name="disciplines">Дисципліни</string>
    <string name="text_for_lists">Щоб переглянути або змінити поточний елемент списку, натисніть на нього</string>
    <string name="new_">Створити</string>
    <string name="change_">Змінити</string>

    <string name="Id">ID</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="delete">Видалити</string>
    <string name="save">Зберегти</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_main_teacher">MainTeacher</string>
</resources>