<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_panel">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="50dp"
                android:text="@string/act_for_admin"
                android:textColor="@color/purple_200"
                android:textColorHighlight="?android:attr/colorMultiSelectHighlight"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="onClients"
                android:text="@string/clients"
                app:backgroundTint="@color/design_default_color_secondary_variant" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="onGroups"
                android:text="@string/groups"
                app:backgroundTint="@color/teal_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/teachers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="onTeachers"
                android:text="@string/teachers"
                app:backgroundTint="@color/purple_700" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="onCourses"
                android:text="@string/courses"
                app:backgroundTint="@color/purple_500" />
        </TableRow>
        <!--
        tema 7
        -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/disciplines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="onDiscipline"
                android:text="@string/disciplines"
                app:backgroundTint="@color/purple_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="onUsers"
                android:text="@string/users"
                app:backgroundTint="@color/black" />
    </TableRow>

    </TableLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>