<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeUser">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/idTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Id" />

            <TextView
                android:id="@+id/idShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginET"
                android:inputType="textPersonName"
                android:text="Login"
                android:ems="10"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_ET"
                android:inputType="textPassword"
                android:text=""
                android:ems="10"/>
        </TableRow>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnOnSave"
            android:text="@string/save"
            app:backgroundTint="@android:color/holo_blue_bright" />


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>