<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeSG">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <TableRow>
        <TextView
            android:text="@string/Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTV"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idShow"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="Назва групи"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameTV"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameET"
            android:inputType="text"
            android:text="Name"
            android:ems="10"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="Курс навчання"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/degreeTV"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/knSpinner"
            android:layout_column="1"
            />
    </TableRow>
        <TableRow>

            <TextView
                android:text="Початок навчання"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sdTV"/>

            <Button
                android:id="@+id/dateStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="onStart"
                android:text="Изменить дату"
                app:backgroundTint="@color/bright_y"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="Кінець навчання"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endTV"/>

            <Button
                android:id="@+id/dateEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="onEnd"
                android:text="Изменить дату"
                app:backgroundTint="@color/bright_y"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="Розклад"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/termTV"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/termSpinner"
                android:layout_column="1"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="Аудиторія"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/audTV"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/audSpinner"
                android:layout_column="1"
                />
        </TableRow>
    <TableRow>
        <TextView
            android:text="=Викладач"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teachTV"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teacherSpinner"
            android:layout_column="1"
            />
    </TableRow>


    <TableRow>

        <Button
            android:id="@+id/ButtonCreateOrChangeUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="btnOnSave"
            android:text="@string/change_"
            app:backgroundTint="@android:color/holo_green_light"
            app:iconTint="@color/purple_500" />

        <Button
            android:id="@+id/buttonDeletUser"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:onClick="btnOnDelete"
            android:text="@string/delete"
            app:backgroundTint="@color/mrRed"
            app:iconTint="?attr/colorError" />
    </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>